crypto: W0 bootstrap minimal - RPC health + transfer ingest + report v0
- crypto/w0_bootstrap/: 3 basit script (30-45 dk setup)
  • rpc_health.py: RPC connection check
  • capture_transfers.py: Transfer events → DuckDB
  • report_v0.py: Wallet 24h summary

- pyproject.toml: [crypto] extras (web3, duckdb, dotenv)
- .gitignore: crypto .env, *.duckdb ignore
- Read-only, testnet-first, no custody
- DoD: Health ✓, Capture ✓, Report ✓

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,12 @@ lora = [
     "bitsandbytes>=0.43.0",  # QLoRA için (M3'te çalışmayabilir)
     "accelerate>=0.27.0",
 ]
+crypto = [
+    "web3>=6.0.0",
+    "requests>=2.31.0",
+    "duckdb>=1.0.0",
+    "python-dotenv>=1.0.0",
+]
 
 [build-system]
 requires = ["setuptools>=61.0"]
