--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@ TODO_personal.md
 *.key
 *.pem
 secrets/
+
+# Crypto (DuckDB, event data)
+crypto/**/.env
+crypto/**/*.duckdb
+crypto/**/*.duckdb.wal
+crypto/**/onchain.db
+crypto/**/cache/
