docs: v1.1 polish - CI, JSON schema, validation, CHANGELOG
CI & Quality:
- .github/workflows/docs-link-check.yml: Markdown link check + lint
- .github/workflows/python-ci.yml: Ruff + pytest + crypto smoke test
- .markdownlint.json: Consistent markdown rules

API Contract & Validation:
- schemas/report_v1.json: WalletReportV1 JSON schema
  • Wallet address validation (0x... pattern)
  • Window hours range (1-720)
  • Required fields: wallet, inbound, outbound, tx_count, etc.

- crypto/w0_bootstrap/validate_report.py: JSON validator
  • Draft 2020-12 schema validation
  • Stdin pipe support
  • Usage: report_json.py | validate_report.py

Dependencies & Tools:
- pyproject.toml: jsonschema>=4.23.0 added to [crypto]
- Makefile: Quality commands
  • docs.check: Link validation (lychee)
  • py.ci: Ruff + pytest
  • report.schema: JSON validation pipeline

Documentation:
- CHANGELOG.md: v1.1.0 release notes (comprehensive)
  • All features documented
  • Security & compliance notes
  • Week 0 status summary

- README.md: Badges added (version, docs, security, license)
- crypto/w0_bootstrap/README.md: v1.1 features highlighted
  • Idempotent capture
  • JSON schema
  • Makefile shortcuts

DoD: W0 production-ready
- ✅ CI workflows
- ✅ JSON schema & validation
- ✅ CHANGELOG
- ✅ Documentation complete

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ crypto = [
     "requests>=2.31.0",
     "duckdb>=1.0.0",
     "python-dotenv>=1.0.0",
+    "jsonschema>=4.23.0",
 ]
 
 [build-system]
