config: Add pytest markers to eliminate warnings
Added markers configuration to pyproject.toml:
- unit: Unit tests (fast, isolated)
- integration: Integration tests (multi-component)
- contract: Contract tests (schema validation)
- api: API endpoint tests
- performance: Performance tests (slow)
- slow: Slow tests (> 1s)

Also added --strict-markers to addopts for enforcement.

Result: 0 warnings, 36 tests passed in 6.15s ✅

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,11 +84,20 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+markers = [
+    "unit: Unit tests (fast, isolated)",
+    "integration: Integration tests (multi-component)",
+    "contract: Contract tests (schema validation)",
+    "api: API endpoint tests",
+    "performance: Performance tests (slow)",
+    "slow: Slow tests (> 1s)",
+]
 addopts = [
     "--verbose",
     "--cov=.",
     "--cov-report=term-missing",
     "--cov-report=html",
+    "--strict-markers",
 ]
 
 [tool.coverage.run]
